<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_single_dip"
        android:layout_marginBottom="@dimen/default_margin_content"
        android:background="@color/aluminum"
        app:layout_constraintBottom_toTopOf="@+id/textViewAuthorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUserEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_address"
        android:textColorHint="@color/silver"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUserMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/your_message"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxScreenshot"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewAuthorHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        tools:text="@string/feedback_thank_you_for_trying_message" />

    <CheckBox
        android:id="@+id/checkBoxScreenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/include_app_screenshot"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonScreenshot"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <ImageButton
        android:id="@+id/imageButtonScreenshot"
        android:layout_width="@dimen/width_screenshot"
        android:layout_height="@dimen/height_screenshot"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/screenshot"
        android:padding="@dimen/default_margin_small"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textViewTouchToPreview"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewTouchToPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_content"
        android:text="@string/touch_to_preview_and_edit"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/default_margin_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/default_margin_content" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/screenShotGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="imageButtonScreenshot,textViewTouchToPreview" />

</androidx.constraintlayout.widget.ConstraintLayout>
