...
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: denbond7
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlowCrypt</string>
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
...
    <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
    <string name="backup_options">Backup options</string>
    <string name="change_pass_phrase">Change pass phrase</string>
    <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s</string>
    <string name="pass_phrase_is_too_weak">Your pass phrase is too weak</string>
    <string name="fix">fix</string>
    <string name="different_pass_phrases">Your private keys have different pass phrases</string>
    <plurals name="file_contains_some_amount_of_keys">
        <item quantity="one">[%1$s]</item>
        <item quantity="other">[%1$s] contains %2$d keys</item>
    </plurals>
    <plurals name="loaded_private_keys_from_clipboard">
        <item quantity="one">Loaded private key from your clipboard</item>
...
    <string name="add_recipient">Add recipient</string>
    <string name="type_valid_email_or_select_from_dropdown">Please type a valid email address or choose from a dropdown list</string>
    <string name="added">Added</string>
    <string name="already_added">Already added</string>
    <string name="more_recipients" tools:ignore="PluralsCandidate">+%1$d more</string>
    <string name="add_recipient_to_send_message">Please add at least one recipient in \"To\" to send this message</string>
    <string name="send_feedback_failed_hint">There was an error sending message. Our direct email is %1$s.\n\nError details:\n%2$s</string>
    <string name="edit_draft">Edit draft</string>
    <string name="saving_draft">Saving draft</string>
    <string name="fetching_drafts_info_failed">Fetching drafts info failed. Please try again.</string>
    <string name="no_recipients">(no recipients)</string>
    <string name="could_not_save_draft">Could not save a draft\n\nError details:\n%1$s</string>
    <string name="can_not_replace_public_key_at_attester">Cannot replace public key at attester because your organisation rules forbid it.</string>
...
