<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_margin_content"
    android:paddingTop="@dimen/default_margin_content"
    android:paddingEnd="@dimen/default_margin_content">

    <TextView
        android:id="@+id/tVStatusMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textSize="@dimen/default_text_size_big" />

    <ProgressBar
        android:id="@+id/pBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin_content_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVKeys"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:layout_weight="1"
        android:visibility="gone"
        tools:itemCount="3"
        tools:listitem="@layout/prv_key_item"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pBCheckPassphrase"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:indeterminateOnly="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tILKeyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_passphrase"
        android:visibility="gone"
        app:counterEnabled="false"
        app:errorEnabled="true"
        app:passwordToggleContentDescription="description"
        app:passwordToggleEnabled="true"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTKeyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:id="@+id/btnUpdatePassphrase"
        style="@style/AppWidget.Button.Big"
        android:layout_width="match_parent"
        android:text="@string/provide_passphrase"
        android:textAllCaps="true"
        android:visibility="gone"
        tools:visibility="visible" />
</LinearLayout>
