...
            app:argType="string" />
        <argument
            android:name="accountEntity"
            app:argType="com.flowcrypt.email.database.entity.AccountEntity" />
        <action
            android:id="@+id/action_changePassphraseOfImportedKeysFragment_to_backupKeysFragment"
            app:destination="@id/backupKeysFragment"
            app:popUpTo="@id/mainSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/recipientsListFragment"
        android:name="com.flowcrypt.email.ui.activity.fragment.RecipientsListFragment"
...
